--- a/CodeFactory/CodeFactory-Info.plist
+++ b/CodeFactory/CodeFactory-Info.plist
@@ -7,7 +7,7 @@
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIconFile</key>
-	<string>icon_512x512</string>
+	<string>icons</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.aavci.${PRODUCT_NAME:rfc1034identifier}</string>
 	<key>CFBundleInfoDictionaryVersion</key>
