Add AppKit and UIKit classes and protocols.

--- a/CodeFactory/plists/Classes.plist
+++ b/CodeFactory/plists/Classes.plist
@@ -2,6 +2,7 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <array>
+    <!-- Foundation Classes //-->
     <string>NSAffineTransform</string>
     <string>NSAppleEventDescriptor</string>
     <string>NSAppleEventManager</string>
@@ -191,5 +192,290 @@
     <string>NSXPCInterface</string>
     <string>NSXPCListener</string>
     <string>NSXPCListenerEndpoint</string>
+    
+    <!-- AppKit classes //-->
+    <string>NSActionCell</string>
+    <string>NSAlert</string>
+    <string>NSAnimation</string>
+    <string>NSAnimationContext</string>
+    <string>NSApplication</string>
+    <string>NSArrayController</string>
+    <string>NSATSTypesetter</string>
+    <string>NSBezierPath</string>
+    <string>NSBitmapImageRep</string>
+    <string>NSBox</string>
+    <string>NSBrowser</string>
+    <string>NSBrowserCell</string>
+    <string>NSButton</string>
+    <string>NSButtonCell</string>
+    <string>NSCachedImageRep</string>
+    <string>NSCell</string>
+    <string>NSCIImageRep</string>
+    <string>NSClipView</string>
+    <string>NSCollectionView</string>
+    <string>NSCollectionViewItem</string>
+    <string>NSColor</string>
+    <string>NSColorList</string>
+    <string>NSColorPanel</string>
+    <string>NSColorPicker</string>
+    <string>NSColorSpace</string>
+    <string>NSColorWell</string>
+    <string>NSComboBox</string>
+    <string>NSComboBoxCell</string>
+    <string>NSControl</string>
+    <string>NSController</string>
+    <string>NSCursor</string>
+    <string>NSCustomImageRep</string>
+    <string>NSDatePicker</string>
+    <string>NSDatePickerCell</string>
+    <string>NSDictionaryController</string>
+    <string>NSDockTile</string>
+    <string>NSDocument</string>
+    <string>NSDocumentController</string>
+    <string>NSDraggingImageComponent</string>
+    <string>NSDraggingItem</string>
+    <string>NSDraggingSession</string>
+    <string>NSDrawer</string>
+    <string>NSEPSImageRep</string>
+    <string>NSEvent</string>
+    <string>NSFont</string>
+    <string>NSFontCollection</string>
+    <string>NSFontDescriptor</string>
+    <string>NSFontManager</string>
+    <string>NSFontPanel</string>
+    <string>NSForm</string>
+    <string>NSFormCell</string>
+    <string>NSGlyphGenerator</string>
+    <string>NSGlyphInfo</string>
+    <string>NSGradient</string>
+    <string>NSGraphicsContext</string>
+    <string>NSHelpManager</string>
+    <string>NSImage</string>
+    <string>NSImageCell</string>
+    <string>NSImageRep</string>
+    <string>NSImageView</string>
+    <string>NSLayoutManager</string>
+    <string>NSLevelIndicator</string>
+    <string>NSLevelIndicatorCell</string>
+    <string>NSMatrix</string>
+    <string>NSMenu</string>
+    <string>NSMenuItem</string>
+    <string>NSMenuItemCell</string>
+    <string>NSMenuView</string>
+    <string>NSMutableFontCollection</string>
+    <string>NSMutableParagraphStyle</string>
+    <string>NSNib</string>
+    <string>NSNibConnector</string>
+    <string>NSNibControlConnector</string>
+    <string>NSNibOutletConnector</string>
+    <string>NSObjectController</string>
+    <string>NSOpenGLContext</string>
+    <string>NSOpenGLLayer</string>
+    <string>NSOpenGLPixelBuffer</string>
+    <string>NSOpenGLPixelFormat</string>
+    <string>NSOpenGLView</string>
+    <string>NSOpenPanel</string>
+    <string>NSOutlineView</string>
+    <string>NSPageController</string>
+    <string>NSPageLayout</string>
+    <string>NSPanel</string>
+    <string>NSParagraphStyle</string>
+    <string>NSPasteboard</string>
+    <string>NSPasteboardItem</string>
+    <string>NSPathCell</string>
+    <string>NSPathComponentCell</string>
+    <string>NSPathControl</string>
+    <string>NSPDFImageRep</string>
+    <string>NSPersistentDocument</string>
+    <string>NSPICTImageRep</string>
+    <string>NSPopover</string>
+    <string>NSPopUpButton</string>
+    <string>NSPopUpButtonCell</string>
+    <string>NSPredicateEditor</string>
+    <string>NSPredicateEditorRowTemplate</string>
+    <string>NSPrinter</string>
+    <string>NSPrintInfo</string>
+    <string>NSPrintOperation</string>
+    <string>NSPrintPanel</string>
+    <string>NSProgressIndicator</string>
+    <string>NSResponder</string>
+    <string>NSRuleEditor</string>
+    <string>NSRulerMarker</string>
+    <string>NSRulerView</string>
+    <string>NSRunningApplication</string>
+    <string>NSSavePanel</string>
+    <string>NSScreen</string>
+    <string>NSScroller</string>
+    <string>NSScrollView</string>
+    <string>NSSearchField</string>
+    <string>NSSearchFieldCell</string>
+    <string>NSSecureTextField</string>
+    <string>NSSecureTextFieldCell</string>
+    <string>NSSegmentedCell</string>
+    <string>NSSegmentedControl</string>
+    <string>NSShadow</string>
+    <string>NSSharingService</string>
+    <string>NSSharingServicePicker</string>
+    <string>NSSlider</string>
+    <string>NSSliderCell</string>
+    <string>NSSound</string>
+    <string>NSSpeechRecognizer</string>
+    <string>NSSpeechSynthesizer</string>
+    <string>NSSpellChecker</string>
+    <string>NSSplitView</string>
+    <string>NSStatusBar</string>
+    <string>NSStatusItem</string>
+    <string>NSStepper</string>
+    <string>NSStepperCell</string>
+    <string>NSTableCellView</string>
+    <string>NSTableColumn</string>
+    <string>NSTableHeaderCell</string>
+    <string>NSTableHeaderView</string>
+    <string>NSTableRowView</string>
+    <string>NSTableView</string>
+    <string>NSTabView</string>
+    <string>NSTabViewItem</string>
+    <string>NSText</string>
+    <string>NSTextAttachment</string>
+    <string>NSTextAttachmentCell</string>
+    <string>NSTextBlock</string>
+    <string>NSTextContainer</string>
+    <string>NSTextField</string>
+    <string>NSTextFieldCell</string>
+    <string>NSTextFinder</string>
+    <string>NSTextInputContext</string>
+    <string>NSTextList</string>
+    <string>NSTextStorage</string>
+    <string>NSTextTab</string>
+    <string>NSTextTable</string>
+    <string>NSTextTableBlock</string>
+    <string>NSTextView</string>
+    <string>NSTokenField</string>
+    <string>NSTokenFieldCell</string>
+    <string>NSToolbar</string>
+    <string>NSToolbarItem</string>
+    <string>NSToolbarItemGroup</string>
+    <string>NSTouch</string>
+    <string>NSTrackingArea</string>
+    <string>NSTreeController</string>
+    <string>NSTreeNode</string>
+    <string>NSTypesetter</string>
+    <string>NSUserDefaultsController</string>
+    <string>NSView</string>
+    <string>NSViewAnimation</string>
+    <string>NSViewController</string>
+    <string>NSWindow</string>
+    <string>NSWindowController</string>
+    <string>NSWorkspace</string>
+    
+    <!-- UIKit classes //-->
+    <string>NSLayoutConstraint</string>
+    <string>NSMutableParagraphStyle</string>
+    <string>NSParagraphStyle</string>
+    <string>NSShadow</string>
+    <string>NSStringDrawingContext</string>
+    <string>UIAcceleration</string>
+    <string>UIAccelerometer</string>
+    <string>UIAccessibilityElement</string>
+    <string>UIActionSheet</string>
+    <string>UIActivity</string>
+    <string>UIActivityIndicatorView</string>
+    <string>UIActivityItemProvider</string>
+    <string>UIActivityViewController</string>
+    <string>UIAlertView</string>
+    <string>UIApplication</string>
+    <string>UIBarButtonItem</string>
+    <string>UIBarItem</string>
+    <string>UIBezierPath</string>
+    <string>UIButton</string>
+    <string>UICollectionReusableView</string>
+    <string>UICollectionView</string>
+    <string>UICollectionViewCell</string>
+    <string>UICollectionViewController</string>
+    <string>UICollectionViewFlowLayout</string>
+    <string>UICollectionViewLayout</string>
+    <string>UICollectionViewLayoutAttributes</string>
+    <string>UICollectionViewUpdateItem</string>
+    <string>UIColor</string>
+    <string>UIControl</string>
+    <string>UIDatePicker</string>
+    <string>UIDevice</string>
+    <string>UIDictationPhrase</string>
+    <string>UIDocument</string>
+    <string>UIDocumentInteractionController</string>
+    <string>UIEvent</string>
+    <string>UIFont</string>
+    <string>UIGestureRecognizer</string>
+    <string>UIImage</string>
+    <string>UIImagePickerController</string>
+    <string>UIImageView</string>
+    <string>UILabel</string>
+    <string>UILocalizedIndexedCollation</string>
+    <string>UILocalNotification</string>
+    <string>UILongPressGestureRecognizer</string>
+    <string>UIManagedDocument</string>
+    <string>UIMarkupTextPrintFormatter</string>
+    <string>UIMenuController</string>
+    <string>UIMenuItem</string>
+    <string>UINavigationBar</string>
+    <string>UINavigationController</string>
+    <string>UINavigationItem</string>
+    <string>UINib</string>
+    <string>UIPageControl</string>
+    <string>UIPageViewController</string>
+    <string>UIPanGestureRecognizer</string>
+    <string>UIPasteboard</string>
+    <string>UIPickerView</string>
+    <string>UIPinchGestureRecognizer</string>
+    <string>UIPopoverBackgroundView</string>
+    <string>UIPopoverController</string>
+    <string>UIPrintFormatter</string>
+    <string>UIPrintInfo</string>
+    <string>UIPrintInteractionController</string>
+    <string>UIPrintPageRenderer</string>
+    <string>UIPrintPaper</string>
+    <string>UIProgressView</string>
+    <string>UIReferenceLibraryViewController</string>
+    <string>UIRefreshControl</string>
+    <string>UIResponder</string>
+    <string>UIRotationGestureRecognizer</string>
+    <string>UIScreen</string>
+    <string>UIScreenMode</string>
+    <string>UIScrollView</string>
+    <string>UISearchBar</string>
+    <string>UISearchDisplayController</string>
+    <string>UISegmentedControl</string>
+    <string>UISimpleTextPrintFormatter</string>
+    <string>UISlider</string>
+    <string>UISplitViewController</string>
+    <string>UIStepper</string>
+    <string>UIStoryboard</string>
+    <string>UIStoryboardPopoverSegue</string>
+    <string>UIStoryboardSegue</string>
+    <string>UISwipeGestureRecognizer</string>
+    <string>UISwitch</string>
+    <string>UITabBar</string>
+    <string>UITabBarController</string>
+    <string>UITabBarItem</string>
+    <string>UITableView</string>
+    <string>UITableViewCell</string>
+    <string>UITableViewController</string>
+    <string>UITableViewHeaderFooterView</string>
+    <string>UITapGestureRecognizer</string>
+    <string>UITextField</string>
+    <string>UITextInputMode</string>
+    <string>UITextInputStringTokenizer</string>
+    <string>UITextPosition</string>
+    <string>UITextRange</string>
+    <string>UITextSelectionRect</string>
+    <string>UITextView</string>
+    <string>UIToolbar</string>
+    <string>UITouch</string>
+    <string>UIVideoEditorController</string>
+    <string>UIView</string>
+    <string>UIViewController</string>
+    <string>UIViewPrintFormatter</string>
+    <string>UIWebView</string>
+    <string>UIWindow</string>
 </array>
 </plist>
